--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 # Note: This workflow requires some secrets setup, and set on this repo with the names:
-# 'GITHUB_PUBLISH_TOKEN' (A GitHub Personal Access Token with appropriate permissions - for publishing the built artifacts)
+# 'PUBLISH_TOKEN' (A GitHub Personal Access Token with appropriate permissions - for publishing the built artifacts)
 # 'APPLEID' (The username of your Apple developer account - for notarizing the mac artifacts)
 # 'APPLEID_PASSWORD' (An app-specific password - for notarizing the mac artifacts)
 # 'CSC_LINK' (The HTTPS link or local path to certificate - for code signing of mac artifacts)
@@ -47,7 +47,7 @@ jobs:
           ref: nightly
           submodules: recursive
           fetch-depth: 0 # Note: Needed to be able to pull the 'develop' branch as well for merging
-          # ssh-key: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          # ssh-key: ${{ secrets.PUBLISH_TOKEN }}
       - name: Use Node.js specified in the '.nvmrc' file
         uses: actions/setup-node@v3
         if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && contains(github.event.inputs.message, '[nightly branch]')) }}
@@ -170,7 +170,7 @@ jobs:
         run: npm run build -- --publish always
         shell: bash
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: true
           # TODO: Commented out the code signing process for now (so as to at least get unsigned nightlies available for testing)
           # APPLEID: ${{ secrets.APPLEID }}
@@ -182,7 +182,7 @@ jobs:
         run: npm run build -- --publish always
         shell: bash
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
           # TODO: Commented out the code signing process for now (so as to at least get unsigned nightlies available for testing)
           # APPLEID: ${{ secrets.APPLEID }}
@@ -261,7 +261,7 @@ jobs:
       - name: Build Ferdium with publish for 'nightly' branch
         if: ${{ env.GIT_BRANCH_NAME == 'nightly' }}
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
         run: |
           npm run build -- --publish always
@@ -269,7 +269,7 @@ jobs:
       - name: Build Ferdium with publish for 'release' beta branch
         if: ${{ env.GIT_BRANCH_NAME == 'release' && contains(env.PACKAGE_VERSION, 'beta') }}
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
         run: |
           npm run build -- --publish always
@@ -351,7 +351,7 @@ jobs:
         run: npm run build -- --publish always
         shell: bash
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: true
           # TODO: Commented out the code signing process for now (so as to at least get unsigned nightlies available for testing)
           WIN_CSC_LINK: ${{ secrets.WIN_CSC_LINK }}
@@ -361,7 +361,7 @@ jobs:
         run: npm run build -- --publish always
         shell: bash
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           CSC_IDENTITY_AUTO_DISCOVERY: false
           # TODO: Commented out the code signing process for now (so as to at least get unsigned nightlies available for testing)
           # WIN_CSC_LINK: ${{ secrets.WIN_CSC_LINK }}
