--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -365,9 +365,9 @@ jobs:
       - name: Tweak pnpm.cjs
         run: |
           # Run the command to get the pnpm store path and store it in a variable
-          PNPM_BASEDIR=$(dirname "$(echo "$0" | sed -e 's/\\/\//g' -e 's/^\([A-Za-z]\):/\/\1/')")
+          PNPM_BASEDIR=$(dirname "$(echo "$PNPM_HOME" | sed -e 's/\\/\//g' -e 's/^\([A-Za-z]\):/\/\1/')")
 
-          sed -i 's/\/usr\/bin\/env node/node/g' "$PNPM_BASEDIR/node_modules/pnpm/bin/pnpm.cjs"
+          sed -i 's/\/usr\/bin\/env node/node/g' "$PNPM_BASEDIR/pnpm/bin/pnpm.cjs"
         shell: bash
       - name: Install node dependencies
         uses: nick-fields/retry@v2.8.3
